--- a/app/src/main/res/layout/series_posts_screen_backup.xml
+++ b/app/src/main/res/layout/series_posts_screen_backup.xml
@@ -107,7 +107,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
-                    app:srcCompat="@tools:sample/avatars[0]" />
+                    app:srcCompat="@drawable/avt" />
 
             </androidx.cardview.widget.CardView>
 
@@ -142,7 +142,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
-                    app:srcCompat="@tools:sample/avatars[0]" />
+                    app:srcCompat="@drawable/avt" />
 
             </androidx.cardview.widget.CardView>
 
@@ -152,7 +152,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="32dp"
-                android:text="%author-name%"
+                android:text="DustinDinh"
                 android:textColor="#5488C7"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
