--- a/app/src/main/res/layout/series_item.xml
+++ b/app/src/main/res/layout/series_item.xml
@@ -7,7 +7,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/ivUserAvatar"
+        android:id="@+id/ivUserAvt"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginStart="32dp"
@@ -37,8 +37,8 @@
         android:textColor="#5488C7"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ivUserAvatar"
-        app:layout_constraintTop_toTopOf="@+id/ivUserAvatar" />
+        app:layout_constraintStart_toEndOf="@+id/ivUserAvt"
+        app:layout_constraintTop_toTopOf="@+id/ivUserAvt" />
 
     <TextView
         android:id="@+id/textView18"
@@ -49,7 +49,7 @@
         android:layout_marginEnd="32dp"
         android:text="%time-publish%"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ivUserAvatar"
+        app:layout_constraintStart_toEndOf="@+id/ivUserAvt"
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <TextView
@@ -65,7 +65,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivUserAvatar" />
+        app:layout_constraintTop_toBottomOf="@+id/ivUserAvt" />
 
     <TextView
         android:id="@+id/textView20"
