--- a/app/src/main/res/layout/user_activity_screen.xml
+++ b/app/src/main/res/layout/user_activity_screen.xml
@@ -7,18 +7,28 @@
     android:layout_height="match_parent">
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/ivUserAvatar"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="20dp"
-        app:civ_border_color="#FF000000"
-        app:civ_border_width="0dp"
-        android:src="@drawable/avt"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/ivUserAvt"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="100dp"
+        app:cardCornerRadius="75dp"
+        app:cardElevation="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-    </de.hdodenhof.circleimageview.CircleImageView>
+
+        <ImageView
+            android:id="@+id/imgUserAvt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/avt"
+            tools:layout_editor_absoluteX="-66dp"
+            tools:layout_editor_absoluteY="-19dp" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/user_displayname"
@@ -34,7 +44,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivUserAvatar" />
+        app:layout_constraintTop_toBottomOf="@+id/ivUserAvt" />
 
     <TextView
         android:id="@+id/user_email"
