--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -19,9 +19,15 @@
         android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="#636363"/>
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_more"/>
+        android:layout_marginRight="20dp"
+        android:src="@drawable/ic_notification" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_search_primary"/>
 
 </LinearLayout>
