done/RecyclerView Post

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,13 +14,11 @@
 
         <include layout="@layout/main_toolbar" />
 
-        <TextView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/post_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Home"
-            android:textSize="50sp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent" />
+
     </LinearLayout>
     <RelativeLayout
         android:layout_width="300dp"
