--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
+        android:onClick="ClickNotification"
         android:src="@drawable/ic_notification" />
     <ImageView
         android:layout_width="wrap_content"
