--- a/app/src/main/res/layout/series_custom.xml
+++ b/app/src/main/res/layout/series_custom.xml
@@ -1,6 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
+
+    <ImageView
+        android:id="@+id/imgSeries"
+        android:layout_width="86dp"
+        android:layout_height="58dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_series" />
+
+    <TextView
+        android:id="@+id/txtUsernameSeries"
+        android:layout_width="0dp"
+        android:layout_height="27dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imgSeries"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtDateSeries"
+        android:layout_width="0dp"
+        android:layout_height="32dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imgSeries"
+        app:layout_constraintTop_toBottomOf="@+id/txtUsernameSeries" />
+
+    <TextView
+        android:id="@+id/txtTitleSeries"
+        android:layout_width="0dp"
+        android:layout_height="47dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDateSeries" />
+
+    <TextView
+        android:id="@+id/txtContentSeries"
+        android:layout_width="0dp"
+        android:layout_height="61dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTitleSeries" />
 </androidx.constraintlayout.widget.ConstraintLayout>
