--- a/app/src/main/res/layout/activity_post__detail.xml
+++ b/app/src/main/res/layout/activity_post__detail.xml
@@ -9,7 +9,8 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
     <include
         layout="@layout/top_navbar_avt"/>
     <ScrollView
