--- a/app/src/main/res/layout/top_navbar_avt.xml
+++ b/app/src/main/res/layout/top_navbar_avt.xml
@@ -14,7 +14,9 @@
         android:onClick="clickBack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:clickable="true"
+        />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
