--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,28 +5,29 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start"
     tools:context=".MainActivity">
-
-    <LinearLayout
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            layout="@layout/app_bar_main"
+            />
+    <com.google.android.material.navigation.NavigationView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <include layout="@layout/main_toolbar" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/post_recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
-    <RelativeLayout
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
+        android:id="@+id/nav_view"
         android:layout_gravity="start"
-        android:background="@android:color/white">
-        <include layout="@layout/main_nav_drawer"/>
-    </RelativeLayout>
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/menu"
+        app:itemBackground="@drawable/menu_item_padding"
+        app:itemTextColor="@drawable/nav_item_color"
+        app:itemIconTint="@drawable/nav_item_color"
+        app:itemTextAppearance="@style/TextViewStyle"
+        app:itemHorizontalPadding="40dp"
+
+        />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
