--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorMute">#9B9B9B</color>
     <color name="colorSecondary">#636363</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
