--- a/app/src/main/res/layout/activity_post_item.xml
+++ b/app/src/main/res/layout/activity_post_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/postItemLayout"
+    android:id="@+id/seriesItemLayout"
 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -19,7 +19,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/post_item_title"
+                android:id="@+id/txtTitleSeries"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -34,7 +34,7 @@
                 android:orientation="horizontal">
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/post_item_avt"
+                    android:id="@+id/series_item_avt"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/avt"
@@ -48,14 +48,14 @@
                     android:paddingStart="8dp">
 
                     <TextView
-                        android:id="@+id/post_item_author"
+                        android:id="@+id/txtUsernameSeries"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="%author%"
                         android:textColor="@color/colorPrimary" />
 
                     <TextView
-                        android:id="@+id/post_item_createDate"
+                        android:id="@+id/txtDateSeries"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="%created_date%" />
