--- a/app/src/main/res/layout/fragment_series.xml
+++ b/app/src/main/res/layout/fragment_series.xml
@@ -11,4 +11,9 @@
         android:layout_height="match_parent"
         android:text="Series Fragment" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/series_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </FrameLayout>
