--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         <include
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            layout="@layout/app_bar_main"
+            layout="@layout/activity_main_nav__tool_bar"
             />
     <com.google.android.material.navigation.NavigationView
         android:layout_width="match_parent"
