--- a/app/src/main/res/layout/notifications_custom.xml
+++ b/app/src/main/res/layout/notifications_custom.xml
@@ -7,7 +7,7 @@
 
 
     <ImageView
-        android:id="@+id/imgNotification"
+        android:id="@+id/btnBacl"
         android:layout_width="74dp"
         android:layout_height="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,7 +19,7 @@
         android:layout_width="0dp"
         android:layout_height="38dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgNotification"
+        app:layout_constraintStart_toEndOf="@+id/btnBacl"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -27,6 +27,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgNotification"
+        app:layout_constraintStart_toEndOf="@+id/btnBacl"
         app:layout_constraintTop_toBottomOf="@+id/txtContentNotification" />
 </androidx.constraintlayout.widget.ConstraintLayout>
