--- a/app/src/main/res/layout/series_item.xml
+++ b/app/src/main/res/layout/series_item.xml
@@ -27,7 +27,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/txt_vote"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toTopOf="@+id/ivUserAvt" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/post_author_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -50,10 +50,10 @@
         android:text="%time-publish%"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivUserAvt"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_vote" />
 
     <TextView
-        android:id="@+id/textView19"
+        android:id="@+id/txt_post_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -77,7 +77,7 @@
         android:text="%post-short-description%"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView19"
-        app:layout_constraintTop_toBottomOf="@+id/textView19" />
+        app:layout_constraintStart_toStartOf="@+id/txt_post_date"
+        app:layout_constraintTop_toBottomOf="@+id/txt_post_date" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
