--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_back"
+            android:onClick="backBnt"
             android:layout_marginEnd="15dp"/>
         <EditText
             android:id="@+id/search_input"
@@ -35,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_close"
+            android:onClick="closeBtn"
             android:layout_marginStart="15dp"/>
 
     </LinearLayout>
