--- a/app/src/main/res/layout/activity_post_item.xml
+++ b/app/src/main/res/layout/activity_post_item.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="300dp"
+            android:layout_width="275dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -24,6 +24,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="%post_title%"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:textColor="#000"
                 android:textSize="20sp"
                 android:textStyle="bold" />
