--- a/app/src/main/res/layout/fragment_annoucement.xml
+++ b/app/src/main/res/layout/fragment_annoucement.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".AnnoucementFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Announcement Fragment" />
-
+        android:orientation="horizontal"
+        android:padding="16dp">
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/announcementRecyclerView"/>
+    </LinearLayout>
 </FrameLayout>
