--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -16,7 +16,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
-            android:onClick="ClickLogo"
+            android:onClick="launchUserActivity"
             android:src="@drawable/avt"
             app:civ_border_color="#FF000000"
             app:civ_border_width="0dp"
@@ -34,6 +34,7 @@
             android:textColor="#5488C7"
             android:textSize="24sp"
             android:textStyle="bold"
+            android:onClick="launchClipPost"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/user_avt"
