--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -22,6 +22,7 @@
                     android:id="@+id/menu_setting"
                     android:icon="@drawable/ic_setting"/>
                 <item android:title="Logout"
+                    android:onClick="handleLogoutClickEvent"
                     android:id="@+id/menu_logout"
                     android:icon="@drawable/ic_logout"/>
             </group>
