--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,14 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
     tools:context=".MainActivity">
-        <include
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            layout="@layout/activity_main_nav__tool_bar"
-            />
+
+    <include
+
+        layout="@layout/activity_main_nav__tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
     <com.google.android.material.navigation.NavigationView
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/nav_view"
