--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navHeaderLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/navLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_avt"
+            android:id="@+id/nav_avatar"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:onClick="ClickLogo"
-            android:src="@drawable/avt"
+            android:src="@drawable/empty_avatar"
             app:civ_border_color="#FF000000"
             app:civ_border_width="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -25,28 +28,29 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView32"
+            android:id="@+id/nav_displayname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
-            android:text="Dustin Dinh"
+            android:text="Guest Account"
             android:textColor="#5488C7"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/user_avt"
-            app:layout_constraintTop_toTopOf="@+id/user_avt" />
+            app:layout_constraintStart_toEndOf="@+id/nav_avatar"
+            app:layout_constraintTop_toTopOf="@+id/nav_avatar" />
 
         <TextView
-            android:id="@+id/textView37"
+            android:id="@+id/nav_username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@dustin.dinh"
+            android:text="@You.Are.Not.Login"
             android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="@+id/textView32"
-            app:layout_constraintStart_toStartOf="@+id/textView32"
-            app:layout_constraintTop_toBottomOf="@+id/textView32" />
+            app:layout_constraintEnd_toEndOf="@+id/nav_displayname"
+            app:layout_constraintStart_toStartOf="@+id/nav_displayname"
+            app:layout_constraintTop_toBottomOf="@+id/nav_displayname" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
