--- a/app/src/main/res/layout/register_activity_screen.xml
+++ b/app/src/main/res/layout/register_activity_screen.xml
@@ -109,7 +109,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/your_name_register"
+        android:id="@+id/your_name_login"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -138,7 +138,7 @@
         android:hint="Your email address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/your_name_register">
+        app:layout_constraintTop_toBottomOf="@+id/your_name_login">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
