--- a/app/src/main/res/layout/register_activity_screen.xml
+++ b/app/src/main/res/layout/register_activity_screen.xml
@@ -55,6 +55,7 @@
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:theme="@style/ButtonLogin"
+        android:onClick="handleRegisterClickEvent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirm_register" />
